re PR middle-end/23497 (Bogus 'is used uninitialized...' warning about std::complex<T>)

PR middle-end/23497
        * tree-ssa.c (warn_uninitialized_var): Skip real and imaginary
        parts of an SSA_NAME.

From-SVN: r107107