gcc/testsuite/gcc.dg/uninit-13.c
@@ -1,0 +1,10 @@
+/* { dg-do compile } */
+/* { dg-options "-O -Wuninitialized" } */
+
+typedef _Complex float C;
+C foo()
+{
+  C f;
+  __imag__ f = 0;
+  return f;		/* { dg-warning "" "uninit" { xfail *-*-* } } */
+}
